--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,14 +1,54 @@
-.nav-container{
-    display:flex;
+.nav-container {
+    display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
     background-color: rgb(144, 144, 226);
     color: white;
-}
-
-.link{
+    position: relative;
+  }
+  
+  .link {
     padding-left: 10px;
     text-decoration: none;
     color: white;
-}
+  }
+  
+  .nav-links {
+    display: flex;
+    gap: 5px;
+  }
+  
+  .menu-icon {
+    display: none;
+    color:rgb(144, 144, 226);
+  }
+  
+  @media (max-width: 768px) {
+  
+    .menu-icon {
+      display: block;
+      color: white;
+    }
+  
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 50px;
+      right: 0;
+      background-color: rgb(144, 144, 226);
+      width: 50%;
+      padding: 10px;
+    }
+  
+    .nav-links.open {
+      display: flex;
+    }
+
+    .link {
+      padding: 15px;
+      text-align: center;
+    }
+  }
+  
